      Jakub Wilk.  (Closes: #572260)
    + [ADB] Add a spelling correction for "unecessary".  Thanks, Jakub
      Wilk.  (Closes: #572456)

  * man/lintian-info.1:
    + [CW] Fix typo.

  * reporting/templates/foot.tmpl:
    + [ADB] Replace the "please mail comments to the maintainer" request
      with a pointer to reportbug.

  * t/tests/binaries-multiarch/:
    + [RG] Fix test failure in non-i386 architectures by normalising the
      expected output.  Thanks, Niko Tyni.  (Closes: #568680)

 -- Raphael Geissert <geissert@debian.org>  Mon, 01 Feb 2010 14:28:54 -0600

lintian (2.3.3) unstable; urgency=low

  The "Policy 3.8.4" release.

  * Summary of tag changes:
    + Added:
      - missing-dependency-on-phpapi
      - obsolete-comments-style-in-php-ini
      - package-contains-mime-cache-file
      - package-contains-mimeinfo.cache-file
      - triplet-dir-and-architecture-mismatch

  * checks/binaries{,.desc}:
    + [RG] Warn about packages shipping PHP extensions but not
      depending on phpapi-*.
  * checks/debconf.desc:
    + [RG] There are legitimate uses of db_input on the postinst
      script, downgrading the certainty of the check.  (Closes: #543418)
  * checks/fields{,.desc}:
    + [RG] Don't warn about depending on the phpapi-* virtual package.
  * checks/files{,.desc}:
    + [RG] Warn about packages shipping PHP .ini files using old-style
      (#) comments separators.
    + [RG] Warn about packages embedding the dojo and dijit javascript
      libraries.
    + [RG] Don't warn about packages containing /sys or /selinux
      directories.  Policy 3.8.4 grants an exception to the FHS.
    + [RG] Warn about packages containing (/usr)/lib/<triplet>
      directories for a <triplet> that isn't the one of the
      architecture of the package, per Policy 3.8.4 requirement.
    + [RG] Warn about packages shipping cache files generated by
      update-mime-database.  Thanks, Jakub Wilk.  (Closes: #563685)